--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -49,7 +49,7 @@
                     </div>
                   <div class="s1">{{spe.title}}</div>
                   <div>
-                    <span class="s2goldbold mr-3">${{spe.price - spe.discount}}</span>
+                    <span class="s2goldbold mr-3">${{spe.discount}}</span>
                     <s>${{spe.price}}</s>
                   </div>
                 </div><!--end col-3-->
@@ -63,7 +63,7 @@
                     <img src="http://luxedreameventhire.co.nz:5000/{{spe.productMedia[0].url}}" class="img100" [routerLink]="[ '/product/', spe.prodId]">
                   </div>
                   <div class="s1">{{spe.title}}</div>
-                  <div><span class="s2goldbold mr-3">${{spe.price - spe.discount}}</span><s>${{spe.price}}</s></div>
+                  <div><span class="s2goldbold mr-3">${{spe.discount}}</span><s>${{spe.price}}</s></div>
                 </div><!--end col-3-->
               </div><!--end row-->
             </div><!--End d-none d-md-block-->
