--- a/src/app/fcomponents/products/product/product.component.css
+++ b/src/app/fcomponents/products/product/product.component.css
@@ -49,9 +49,11 @@ a{
     width: 100%;
     object-fit: cover;
 }
-
 .autofix{
 	width: 100%;
     height: 100%;
     object-fit: cover;
+}
+h2{
+    display: inline;
 }
