--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -1,7 +1,6 @@
-<div class="container pt-2">
+<div class=" pt-2">
   <div class="px-0 px-md-5 mx-2">
     <div class="row py-4">
-      <div class="col-12 s2goldbold">> Shopping cart</div>
     </div>
 
     <div class="row mb-3 productdiv" *ngFor="let prod of prodsInCart; index as i">
@@ -35,7 +34,7 @@
       <button class="btn btn_gold btn-sm" routerLink="/" type="button">
         <i class="fas fa-arrow-left"></i>&nbsp;Continue Shopping
       </button>
-      <button class="btn btn-outline-gold btn-sm" routerLink='/userInfo' style="float:right;">Process to checkout</button>
+      <!-- <button class="btn btn-outline-gold btn-sm" routerLink='/userInfo' style="float:right;">Process to checkout</button> -->
     </div>
   </div>
 </div>
