--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,7 @@ body{
 }
 
 .s1 {
-  font-family: 'Source Serif Pro', serif;
+  font-family: 'RobotoThin', serif;
   font-size: 20px;
   color: #535353;
 }
