--- a/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
@@ -1,20 +1,16 @@
-<div class="container-fluid">
-  <div class="row">
-    
+<div class="container">
+  <div  class="nav2 row m1">
+    <div  class="col-lg-8 col-md-9 col-9">Shopping Bag</div>
+    <div  class="col-lg-4 col-md-3 col-3">Contact</div>
   </div>
+  <hr>
   <div class="row">
-    <div class="col-lg-9 col-12">
+    <div class="col-lg-8 col-12">
       <app-shopping_cart></app-shopping_cart>
     </div>
-    <div class="col-lg-3 col-12">
-      <div class="card">
-        <div class="card-header m1">
-          Contact info
-        </div>
-        <div class="card-body">
-          <app-userInfo></app-userInfo>
-        </div>
-      </div>
+    <div class="col-lg-4 col-12">
+      <app-userInfo></app-userInfo>
+      <br>
     </div>
   </div>
 </div>
