--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -31,7 +31,7 @@
           </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/contactUs">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/faq">FAQ</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/shoppingCart">Shopping Cart</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/checkout">Shopping Cart</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/admin">Login</a></li>
         </ul>
       </div>
