--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -1,8 +1,3 @@
-<div class=" pt-2">
-  <div class="px-0 px-md-5 mx-2">
-    <div class="row py-4">
-    </div>
-
     <div class="row mb-3 productdiv" *ngFor="let prod of prodsInCart; index as i">
       <div class="col-4 col-sm-4 col-md-4 col-lg-3" *ngIf="prod.url">
         <img src="http://luxedreameventhire.co.nz:5000/{{prod.url}}" class="cartProdHeight">
@@ -11,7 +6,7 @@
         <div class="divdetails"><span class="m2">{{prod.Title}}</span></div>
         <div class="divdetails">Unit Price: ${{prod.Price/prod.Quantity}}</div>
         <div class="divdetails">Amount: {{prod.Quantity}}</div>
-        <div class="bg-gray divdetails">Total: ${{prod.Price}}</div>
+        <div class="bg-gray divdetails"> NZ${{prod.Price}}</div>
         <div class="mt-2 divdetails">
           <button class="btn btn-outline-blue" [routerLink]="[ '/product/', prod.ProdId ]">View Detail</button>
           <button class="btn btn-outline-red" (click)="deleteCart(i)" style="float:right;">Delete</button>
@@ -28,13 +23,11 @@
       <br>
     </div>
     <div class="text-right mb-2">
-      Total Price: $<span class="s2bold">{{totalPrice}}</span>
+      Total Price: NZ$<span class="s2bold">{{totalPrice}}</span>
     </div>
     <div class="justify-content-end mb-3" *ngIf="prodsInCart.length!=0">
       <button class="btn btn_gold btn-sm" routerLink="/" type="button">
         <i class="fas fa-arrow-left"></i>&nbsp;Continue Shopping
       </button>
-      <!-- <button class="btn btn-outline-gold btn-sm" routerLink='/userInfo' style="float:right;">Process to checkout</button> -->
     </div>
-  </div>
-</div>
+    <br><br>
