--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -44,7 +44,7 @@
             <div class="d-none d-md-block">
               <div class="row">
                 <div class="col-3" *ngFor="let spe of specials">
-                  <div class="h490">
+                  <div class="h490" *ngIf="spe.productMedia[0]">
                       <img src="http://luxedreameventhire.co.nz:5000/{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
                     </div>
                   <div class="s1">{{spe.title}}</div>
@@ -59,7 +59,7 @@
             <div class="d-block d-md-none">
               <div class="row">
                 <div class="col-6" *ngFor="let spe of specials">
-                  <div class="h490">
+                  <div class="h490" *ngIf="spe.productMedia[0]">
                     <img src="http://luxedreameventhire.co.nz:5000/{{spe.productMedia[0].url}}" class="img100" [routerLink]="[ '/product/', spe.prodId]">
                   </div>
                   <div class="s1">{{spe.title}}</div>
