--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -84,7 +84,7 @@
               <th scope="col">Title<span style="font-size:10px;">标题</span></th>
               <th scope="col" >Subtitle<span style="font-size:10px;">副标题</span></th>
               <th scope="col" >Price<span style="font-size:10px;">价格</span></th>
-              <th scope="col" >Discount<span style="font-size:10px;">折后价</span></th>
+              <th scope="col" >Discount<span style="font-size:10px;">折扣</span></th>
               <th scope="col" *ngIf="blockCode == 2" >Category<span
                   style="font-size:10px;">类别</span></th>
               <th scope="col" >Inventory<span style="font-size:10px;">库存</span></th>
