--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -80,7 +80,7 @@
         <span class="s1">${{productDetail.price}}</span>
     </div>
     <br/>
-    <h3 class="s2 mb-2">{{productDetail.description}}</h3>
+    <h3 class="s2 mb-2" style="white-space: pre-line">{{productDetail.description}}</h3>
     <br/>
     <div class="row justify-content-between mt-3">
       <div class="col-6 col-lg-8">
