--- a/src/app/fcomponents/products/productList/productList.component.css
+++ b/src/app/fcomponents/products/productList/productList.component.css
@@ -51,7 +51,7 @@ a.dropdown-item:hover{
     margin-bottom: 0px;
 }
 
-.carousel-inner .carousel-item img {
+.h490 img {
 	position:  absolute;
 	top: 0;
 	left: 0;
