--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -34,26 +34,25 @@
   <!-- display products -->
   <div class="row py-3">
     <div class='col-12 col-sm-6 col-md-6 col-lg-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
-        <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel">
+
+        <!-- <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel">
             <a [routerLink] = "['/product/',product.prodId]">
             <div class="carousel-inner" >
-                <!-- active -->
               <div class="carousel-item active overflow-hidden h490" *ngFor="let media of product.productMedia, index as i" [ngClass]="{'active': i == 0}">
-                <!-- TODO: change the baseUrl -->
-                <!-- <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block autofix"/> -->
                 <img src="http://luxedreameventhire.co.nz:5000/{{media.url}}" class="d-block autofix">
               </div>
             </div>
             </a>
-            <a class="carousel-control-prev" href="#carouselExampleFade{{i}}" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleFade{{i}}" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+          </div> -->
+
+          <div>
+              <a [routerLink] = "['/product/',product.prodId]">
+                <div class="h490">
+                <img src="http://luxedreameventhire.co.nz:5000/{{product.productMedia[0].url}}" class="d-block autofix">
+                </div>
+              </a>
           </div>
+
           <h1><a [routerLink] = "['/product/',product.prodId]" class="m1">{{product.title}}</a></h1>
       <div class="row">
         <div class="col-4" *ngIf="product.discount && product.discount>0"><span class="s2gold mr-3">${{product.price - product.discount}}</span><s>${{product.price}}</s></div>
