--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -32,7 +32,7 @@
         </div>
       </div>
   <!-- display products -->
-  <div class="row py-3">
+  <div class="row py-3" *ngIf="allProducts">
     <div class='col-12 col-sm-6 col-md-6 col-lg-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
 
         <!-- <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel">
